--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,14 @@
+/* Users show page styles */
+.user-show-avatar {
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 6px 4px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 6px 4px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 6px 4px 0px rgba(50, 50, 50, 0.75);
+    border: 2px solid white;
+    height: 128 px;
+    width: 128 px;
+}
+
 .job-title-icon {
     display: inline-block;
     width: 30px;
@@ -26,10 +37,11 @@
     border-color: #46b8da;
 }
 
-.avatar-style {
+/* Users index page styles */
+.user-index-avatar {
     border-radius: 50%;
-    -webkit-box-shadow: 0px 6px 4px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow:    0px 6px 4px 0px rgba(50, 50, 50, 0.75);
-    box-shadow:         0px 6px 4px 0px rgba(50, 50, 50, 0.75);
-    border: 2px solid white;
+}
+
+.well.white-bg {
+    background-color: white;
 }
